# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Wed Mar  3 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Implemented fix for released monetdb-jdbc-3.0.jre8.jar and
  monetdb-mcl-1.19.jre8.jar when it is was run using java build
  1.8.0_###.  It would throw:  java.lang.NoSuchMethodError:
  java.nio.CharBuffer.mark()Ljava/nio/CharBuffer; at
  org.monetdb.mcl.parser.StartOfHeaderParser.getNextAsString(Unknown
  Source) at
  org.monetdb.jdbc.MonetConnection$ResponseList.executeQuery(Unknown
  Source) at
  org.monetdb.jdbc.MonetConnection$ResponseList.processQuery(Unknown
  Source) at org.monetdb.jdbc.MonetStatement.internalExecute(Unknown
  Source) at org.monetdb.jdbc.MonetStatement.execute(Unknown Source)
  The problem is caused by a change in java.nio.CharBuffer API (return
  types of methods mark() and reset() have changed from Buffer to
  CharBuffer) from Java 8 to Java 9+.

* Wed Feb 17 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Compiled and released new jar files: monetdb-jdbc-3.0.jre8.jar,
  monetdb-mcl-1.19.jre8.jar and jdbcclient.jre8.jar

  monetdb-jdbc-3.0.jre8.jar is a new major release of the MonetDB JDBC driver.
  The MonetDB JDBC Driver is now compliant with the Java™ Database
  Connectivity (JDBC) 4.2 specification as defined in Java 8 and requires
  Java 8 runtime (profile compact2) as minimum version.

  Important: the MonetDB JDBC driver class name has also been changed in
  this release to: org.monetdb.jdbc.MonetDriver.  The old driver class
  (nl.cwi.monetdb.jdbc.MonetDriver) is also included in the jar file, but
  only to ease the transition for existing deployments. It will be removed
  in a future release of this JDBC driver. Please use the new driver
  class name if this is used in your configuration files or Java code.

  The JdbcClient program (jdbcclient.jre8.jar) has been extended with
  functionality to validate the integrity of the system tables (\vsci) or